update information and adding a link to OpenShift

--- a/static/index.html
+++ b/static/index.html
@@ -65,6 +65,7 @@
 			<p>
 				Code by <a href="http://www.juan-medina.com" target="_blank">Juan Medina</a>.
 			</p>
+			<p><a href="http://openshift.redhat.com/" target="_blank"><img src="https://assets.openshift.net/content/subdomain/openshift-logo-horizontal.svg"></a></p>
 
 		</footer>
 
